[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/RotatingEnemyController.gd" type="Script" id=1]
[ext_resource path="res://Scripts/RotateToAngle.gd" type="Script" id=2]
[ext_resource path="res://sprites/Pyramid/mummy.png" type="Texture" id=3]
[ext_resource path="res://Scripts/EnemyTorchLight.gd" type="Script" id=4]
[ext_resource path="res://sprites/lighting/FirePointLight.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Detector.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Mover.gd" type="Script" id=11]
[ext_resource path="res://sprites/Pyramid/mummy(2).png" type="Texture" id=12]
[ext_resource path="res://sprites/Pyramid/mummy(1).png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 54.59

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 530, 410 )
rotation = 5.26915
z_as_relative = false
script = ExtResource( 1 )

[node name="Rotator" type="Node2D" parent="."]
position = Vector2( -687.284, -347.71 )
script = ExtResource( 2 )
rotationSpeed = 50.0

[node name="EnemySprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyTorchLight" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="EnemyTorchLight"]
light_mask = 3
position = Vector2( -5.49121, -4.09106 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
offset = Vector2( -33.89, -35 )
mode = 2
shadow_enabled = true
shadow_color = Color( 1, 0, 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyTorchLight"]
position = Vector2( -7.4751, -6.09546 )
shape = SubResource( 2 )

[node name="EnemyViewRadius" type="Area2D" parent="."]
collision_layer = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnemyViewRadius"]
polygon = PoolVector2Array( 500, -200, 500, 200, 0, 0 )

[node name="Detector" type="Node2D" parent="."]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mover" type="Node" parent="."]
script = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.0364475, -0.15353 )
scale = Vector2( 1.00429, 1.01204 )
polygon = PoolVector2Array( 5, 8, 5, -8, -5, -8, -5, 8 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="finishedRotating" from="Rotator" to="." method="_on_Rotator_finishedRotating"]
[connection signal="body_entered" from="EnemyTorchLight" to="EnemyTorchLight" method="_on_EnemyTorchLight_body_entered"]
[connection signal="body_exited" from="EnemyTorchLight" to="EnemyTorchLight" method="_on_EnemyTorchLight_body_exited"]
[connection signal="body_entered" from="EnemyViewRadius" to="Detector" method="_on_EnemyViewRadius_body_entered"]
[connection signal="body_exited" from="EnemyViewRadius" to="Detector" method="_on_EnemyViewRadius_body_exited"]
